<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chdah.umu.thirthy_game_cd.controller.GameActivity"
    android:id="@+id/mainGameScreenLayout"
    >
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/diceGridBox">

        <ImageButton
            android:id="@+id/diceImageButton1"
            android:contentDescription="@string/dice_1"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/diceImageButton2"
            android:contentDescription="@string/dice_2"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:layout_row="0"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/diceImageButton3"
            android:contentDescription="@string/dice_3"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/diceImageButton4"
            android:contentDescription="@string/dice_4"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:layout_column="0"
            android:layout_row="1"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/diceImageButton5"
            android:contentDescription="@string/dice_5"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/diceImageButton6"
            android:contentDescription="@string/dice_6"
            android:layout_width="@dimen/dice_max_width"
            android:layout_height="@dimen/dice_max_height"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star_big_on" />

    </GridLayout>

    <ScrollView
        android:layout_width="93dp"
        android:layout_height="466dp"
        android:layout_above="@id/buttonAndTextLayout"
        android:layout_below="@+id/diceGridBox"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp">

        <RadioGroup
            android:id="@+id/combinationRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/lowRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low" />

                <RadioButton
                    android:id="@+id/fourRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four" />

                <RadioButton
                    android:id="@+id/fiveRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five" />

                <RadioButton
                    android:id="@+id/sixRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six" />


                <RadioButton
                    android:id="@+id/sevenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seven" />


                <RadioButton
                    android:id="@+id/eightRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight" />

                <RadioButton
                    android:id="@+id/nineRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nine" />

                <RadioButton
                    android:id="@+id/tenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten" />

                <RadioButton
                    android:id="@+id/elevenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eleven" />


                <RadioButton
                    android:id="@+id/twelveRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelve" />
        </RadioGroup>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonAndTextLayout"
        android:layout_width="400dp"
        android:layout_height="104dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/score" />

        <Button
            android:id="@+id/roll_dice_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_dice" />

        <Button
            android:id="@+id/calculate_score_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/round_counter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error" />

            <TextView
                android:id="@+id/throw_counter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_error" />


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
